# tft_xgb_forecasting

./: .env.example  .gitignore  README.md  pyproject.toml
src/self_healing_energy/: __init__.py
src/self_healing_energy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/self_healing_energy/anomalies/: __init__.py  contracts.py  detector.py  drift.py  repair.py
src/self_healing_energy/api/: app.py
src/self_healing_energy/config/: __init__.py  models.py  settings.py
src/self_healing_energy/data/: __init__.py  contracts.py  generate_cli.py  parquet_loader.py  splits.py  synthetic.py  validation.py
src/self_healing_energy/features/: engineering.py
src/self_healing_energy/forecasting/: __init__.py  base.py  contracts.py  lightweight_model.py  metrics.py  router.py  tft_adapter.py  xgb_common.py  xgb_explainer.py  xgb_forecaster.py
src/self_healing_energy/optimization/: __init__.py  contracts.py  heuristics.py
src/self_healing_energy/orchestration/: batch_pipeline.py  corrective_loop.py
src/self_healing_energy/serving/: __init__.py  contracts.py
src/self_healing_energy/training/: __init__.py  cli.py  contracts.py  dataset_preparation.py  test_cli.py  testing.py  trainer.py
src/self_healing_energy/utils/: logging.py  serialization.py
tests/: test_pipeline_contracts.py  test_repair_audit.py  test_synthetic_data.py  test_training_flow.py
